test(ci): add travis, kitchen tests, fixes

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,12 +58,13 @@ jobs:
     ## Define the rest of the matrix based on Kitchen testing
     # Make sure the instances listed below match up with
     # the `platforms` defined in `kitchen.yml`
-    - env: INSTANCE=default-debian-10-master-py3
+    # env: INSTANCE=default-debian-10-master-py3
     - env: INSTANCE=default-ubuntu-1804-master-py3
-    - env: INSTANCE=default-centos-8-master-py3
+    - env: INSTANCE=jar-centos-8-master-py3
     # - env: INSTANCE=default-fedora-31-master-py3
     - env: INSTANCE=default-opensuse-leap-151-master-py3
-    - env: INSTANCE=default-amazonlinux-2-master-py3
+    - env: INSTANCE=jar-opensuse-leap-151-master-py3
+    # env: INSTANCE=default-amazonlinux-2-master-py3
     # - env: INSTANCE=default-arch-base-latest-master-py2
     # - env: INSTANCE=default-debian-10-3000-1-py3
     # - env: INSTANCE=default-ubuntu-1804-3000-1-py3
@@ -80,7 +81,7 @@ jobs:
     # - env: INSTANCE=default-ubuntu-1604-2019-2-py3
     # - env: INSTANCE=default-centos-8-2019-2-py3
     # - env: INSTANCE=default-centos-7-2019-2-py3
-    - env: INSTANCE=default-fedora-31-2019-2-py3
+    - env: INSTANCE=jar-fedora-31-2019-2-py3
     # - env: INSTANCE=default-opensuse-leap-151-2019-2-py3
     # - env: INSTANCE=default-amazonlinux-2-2019-2-py3
     # - env: INSTANCE=default-ubuntu-1804-2019-2-py2
@@ -96,7 +97,8 @@ jobs:
     # - env: INSTANCE=default-opensuse-leap-151-2018-3-py2
     # - env: INSTANCE=default-amazonlinux-1-2018-3-py2
     # env: INSTANCE=default-arch-base-latest-2018-3-py2
-    - env: INSTANCE=default-arch-base-latest-master-py2
+    # env: INSTANCE=default-arch-base-latest-master-py2
+    - env: INSTANCE=jar-arch-base-latest-master-py2
 
     ## Define the release stage that runs `semantic-release`
     - stage: 'release'
